# vcpkg-packaging-env

./: CMakeLists.txt  CMakePresets.json  README.md  main.cpp  vcpkg-configuration.json  vcpkg.json  vcpkg_android.cmake
environment/: README.md  artifactory.repo  env_launch.py
environment/automation/: docker.py  docker_run.py  environment.py  group.py  passwd.py  path_hash.py  process.py
environment/cmake/: Analysis.cmake  AppImage.cmake  DefaultConfigurations.cmake  DetectToolset.cmake  Git.cmake  Options.cmake  Python.cmake  SourceControl.cmake  Teamcity.cmake  Testing.cmake  Vcpkg.cmake  Versioning.cmake  linuxdeploy.sh.in  main.cmake
environment/cmake/Analysis/: clang_tidy.cmake  iwyu.cmake
environment/cmake/Testing/: Coverage.cmake  GnuCoverage.cmake  MemoryChecker.cmake  valgrind_default_suppressions.txt
environment/cmake/Toolset/Windows/: Toolset.cmake  compile_flags.cmake
environment/cmake/Toolset/default/: Toolset.cmake  compile_flags.cmake
environment/cmake/python/: __init__.py.in  build_wheel.cmake  pyproject.toml.in
environment/cmake/vcpkg/: fixup_vs_crt.cmake  update_rpath.cmake  vcpkg_install.cmake
environment/dockers/: Dockerfile.xts  artifactory.cer
environment/dockers/scripts/: win_ssh_startup.bat
environment/dockers/toolchains/: n6x_toolchain.cmake  p6x_toolchain.cmake  r6x_toolchain.cmake  v6x_toolchain.cmake
environment/dockers/versions/: linuxdeploy.version
environment/documentation/cmake/: Analysis.md  AppImage.md  DetectToolset.md  Python.md  SourceControl.md  Teamcity.md  Testing.md  Vcpkg.md  Versioning.md
environment/vcpkg/triplets/: evs-x32-r6x-linux.cmake  evs-x64-linux.cmake  evs-x64-n6x-linux.cmake  evs-x64-p6x-linux.cmake  evs-x64-v6x-linux.cmake
